<?xml version="1.0" encoding="utf-8"?>

<!--
* Copyright (c) 2021-2025 Michael Usher
*
* This Source Code Form is subject to the terms of the Mozilla Public License, v. 2.0. If a copy of
* the MPL was not distributed with this file, You can obtain one at https://mozilla.org/MPL/2.0/.
-->

<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/optionMenuSave"
        android:icon="@drawable/ic_save_white"
        android:title="@string/roll_area_menu_save_pool"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/optionsMenuSetStartup"
        android:title="@string/roll_area_menu_load_pool_at_startup" />
    <item
        android:id="@+id/optionMenuLoad"
        android:title="@string/roll_area_menu_go_to_main_menu" />
</menu>