<?xml version="1.0" encoding="utf-8"?>

<!--
* Copyright (c) 2021-2025 Michael Usher
*
* This Source Code Form is subject to the terms of the Mozilla Public License, v. 2.0. If a copy of
* the MPL was not distributed with this file, You can obtain one at https://mozilla.org/MPL/2.0/.
-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/customDieLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CustomDieBuildingActivity"
    android:importantForAutofill="noExcludeDescendants">

    <EditText
        android:id="@+id/editTextDieName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:ems="6"
        android:hint="@string/die_name_hint"
        android:imeOptions="actionNext"
        android:inputType="textPersonName"
        android:maxLength="12"
        android:nextFocusForward="@id/editNumDieMin"
        android:selectAllOnFocus="true"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customDieActivityToolbar" />

    <TextView
        android:id="@+id/customDieValueHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/results_entry_header"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDieName" />

    <EditText
        android:id="@+id/editNumDieMin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="3"
        android:hint="@string/min_result_entry_hint"
        android:imeOptions="actionNext"
        android:inputType="numberSigned"
        android:maxLength="3"
        android:nextFocusForward="@id/editNumDieMax"
        android:selectAllOnFocus="true"
        android:text="1"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/customDieValueTo"
        app:layout_constraintHorizontal_bias="0.66"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customDieValueHeader"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/customDieValueTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/results_entry_between_fields"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/editNumDieMin"
        app:layout_constraintEnd_toEndOf="@+id/customDieValueHeader"
        app:layout_constraintStart_toStartOf="@+id/customDieValueHeader"
        app:layout_constraintTop_toTopOf="@+id/editNumDieMin" />

    <EditText
        android:id="@+id/editNumDieMax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:ems="3"
        android:hint="@string/max_result_entry_hint"
        android:imeOptions="actionDone"
        android:inputType="numberSigned"
        android:maxLength="3"
        android:nextFocusForward="@id/customDieSaveButton"
        android:selectAllOnFocus="true"
        android:text="6"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.33"
        app:layout_constraintStart_toEndOf="@+id/customDieValueTo"
        app:layout_constraintTop_toBottomOf="@+id/customDieValueHeader"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/customDieSaveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/custom_die_save_button"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/customDieValueTo"
        app:layout_constraintStart_toStartOf="@+id/customDieValueTo"
        app:layout_constraintTop_toBottomOf="@+id/editNumDieMin" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/customFacesDivider"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="?attr/colorPrimarySurface"
        android:elevation="20dp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customDieSaveButton">

        <ImageView
            android:id="@+id/faceListCollapseArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:contentDescription="@string/faces_collapse_arrow_content_description"
            android:tint="?attr/colorOnPrimarySurface"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_collapse_arrow" />

        <TextView
            android:id="@+id/customFacesHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/die_face_selection_header"
            android:textColor="?attr/colorOnPrimarySurface"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/faceListCollapseArrow"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/noFacesBanner"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?attr/emptyOverlayBackground"
        app:layout_constraintBottom_toBottomOf="@+id/customFaceArea"
        app:layout_constraintEnd_toEndOf="@+id/customFaceArea"
        app:layout_constraintStart_toStartOf="@+id/customFaceArea"
        app:layout_constraintTop_toTopOf="@+id/customFaceArea">

        <TextView
            android:id="@+id/noFacesText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/die_has_no_faces_banner"
            android:textColor="?attr/emptyOverlayTextColor"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <HorizontalScrollView
        android:id="@+id/customFaceArea"
        android:layout_width="0dp"
        android:layout_height="138dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customFacesDivider">

        <LinearLayout
            android:id="@+id/customFaceList"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal" />
    </HorizontalScrollView>

    <View
        android:id="@+id/divider2"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customFaceArea" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/customDieActivityToolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimaryVariant"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/Theme.DiceThing.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationContentDescription="@string/custom_die_activity_toolbar_close_icon_content_description"
        app:navigationIcon="@drawable/ic_close_x_white"
        app:popupTheme="@style/Theme.DiceThing.ActionBar.PopupMenu"
        app:title="New Die" />

</androidx.constraintlayout.widget.ConstraintLayout>