<?xml version="1.0" encoding="utf-8"?>

<!--
* Copyright (c) 2021-2025 Michael Usher
*
* This Source Code Form is subject to the terms of the Mozilla Public License, v. 2.0. If a copy of
* the MPL was not distributed with this file, You can obtain one at https://mozilla.org/MPL/2.0/.
-->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenuDiceTabFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/menuNoDiceBanner"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/emptyOverlayBackground"
        tools:visibility="gone">

        <TextView
            android:id="@+id/menuNoDiceText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/main_menu_dice_tab_empty_banner"
            android:textAlignment="center"
            android:textColor="?attr/emptyOverlayTextColor"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/menuMakeDiceText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_max="wrap" />

        <TextView
            android:id="@+id/menuMakeDiceText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="128dp"
            android:text="@string/main_menu_dice_tab_empty_banner_advise_create"
            android:textAlignment="center"
            android:textColor="?attr/emptyOverlayTextColor"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_max="wrap" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/customDiceRecycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:contentDescription="@string/main_menu_dice_tab_list_content_description"
        android:paddingBottom="128dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</FrameLayout>