<?xml version="1.0" encoding="utf-8"?>

<!--
* Copyright (c) 2021-2025 Michael Usher
*
* This Source Code Form is subject to the terms of the Mozilla Public License, v. 2.0. If a copy of
* the MPL was not distributed with this file, You can obtain one at https://mozilla.org/MPL/2.0/.
-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PoolConfiguration">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/configActivityToolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimaryVariant"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/Theme.DiceThing.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationContentDescription="@string/activity_toolbar_go_to_main_menu_icon_content_description"
        app:navigationIcon="@drawable/ic_menu_icon_white"
        app:popupTheme="@style/Theme.DiceThing.ActionBar.PopupMenu"
        app:title="@string/configuration_activity_toolbar_title" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/configActivityToolbar">

        <FrameLayout
            android:id="@+id/poolAreaFrame"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="?android:attr/colorBackground"
            app:layout_constraintBottom_toTopOf="@+id/frameDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/configRollFragContainer"
                android:name="com.Winebone.RollTheBones.RollArea"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </FrameLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/frameDivider"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="300dp"
            android:background="?attr/colorSecondary"
            android:elevation="28dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <View
                android:id="@+id/dividerTopBar"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/frameDividerSlideIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:tint="?attr/colorOnSecondary"
                app:layout_constraintBottom_toTopOf="@+id/dividerBottomBar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dividerTopBar"
                app:srcCompat="@drawable/ic_slider_icon"
                android:contentDescription="@string/dice_drawer_drag_icon" />

            <View
                android:id="@+id/dividerBottomBar"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <FrameLayout
            android:id="@+id/dieTypesFrame"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frameDivider">

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/fragmentContainerView2"
                android:name="com.Winebone.RollTheBones.DieTypesDrawer"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>